# alexa-api

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  serverless.yml  variables.live.yml  variables.yml
alexa_api/: __init__.py  controller.py  errors.py  serverless.py  types.py
alexa_api/devices/: repository.py  service.py
alexa_api/intents/: alexa_data.py  alexa_repository.py  alexa_service.py
alexa_api/iot/: __init__.py  iot.py  repository.py  service.py
docs/: openapi.yaml
